[package]
name = "rdns"
version = "0.0.0-git"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["trust-dns", "rustls-tls-webpki-roots", "json"] }
tokio = { version = "1.26", default-features = false, features = ["macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
trust-dns-server = { version = "0.22", default-features = false }
clap = { version = "4.1", features = ["derive", "env"] }
tracing-subscriber = "0.3"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"
